fixed left side bar z-index

--- a/Resources/public/css/leaflet.map2u.css
+++ b/Resources/public/css/leaflet.map2u.css
@@ -51,6 +51,7 @@ and open the template in the editor.
 .tooltip.right .tooltip-arrow{top:50%;left:-5px;margin-top:-5px;border-right-color:white;border-width:5px 5px 5px 0}
 .tooltip.left .tooltip-arrow{top:50%;right:-5px;margin-top:-5px;border-left-color:white;border-width:5px 0 5px 5px}
 .tooltip.bottom .tooltip-arrow{top:-5px;left:50%;margin-left:-5px;border-bottom-color:white;border-width:0 5px 5px}
+.leaflet-control { z-index: inherit }
 .leaflet-control .control-button{display:block;height:40px;width:40px;background-color:#333;
                                  background-color:rgba(0,0,0,0.6);border-radius:4px 0 0 4px;margin-bottom:10px;outline:none
 }
@@ -70,7 +71,7 @@ and open the template in the editor.
 
 .sonata-bc #leaflet_content{overflow:hidden;position:absolute;top:125px;bottom:0;width:100%}
 .sonata-bc #sidebar {position:relative;height:100%;overflow-x:hidden;overflow-y:auto;background-color: rgba(255, 255, 255, 0.92);}
-.sonata-bc #sidebar {float:left;width:350px;font-size:12px}
+.sonata-bc #sidebar {float:left;width:350px;font-size:12px;z-index: 500;}
 .sonata-bc #sidebar h2{padding:20px 20px 10px}
 .sonata-bc #sidebar .search_form {  margin-bottom:0px;padding-bottom:0px;}
 .sonata-bc #sidebar h3,.sonata-bc #sidebar h4{margin-top:20px;margin-bottom:10px;font-size:13px}
